--- a/web/app/themes/inside/package.json
+++ b/web/app/themes/inside/package.json
@@ -47,10 +47,11 @@
     "gsap": "^3.4.2",
     "jquery": "^3.5.1",
     "lax.js": "^1.2.5",
+    "masonry-layout": "^4.2.2",
     "mini-css-extract-plugin": "^0.9.0",
-    "photoswipe": "^4.1.3",
     "popper.js": "^1.16.1",
     "svg-spritemap-webpack-plugin": "^3.5.7",
+    "swiper": "^7.2.0",
     "url-loader": "^4.1.0"
   }
 }
