--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,10 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "platform": {
+      "php": "7.2"
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
