--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Yarn
         run: |
-          yarn --cwd '/web/app/themes/inside'
-          yarn --cwd '/web/app/themes/inside' build
+          pwd
+          ls -l
+          yarn --cwd 'web/app/themes/inside'
+          yarn --cwd 'web/app/themes/inside' build
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
