set node version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "12"
       - name: Yarn
         run: |
-          pwd
-          ls -l
           yarn --cwd 'web/app/themes/inside'
           yarn --cwd 'web/app/themes/inside' build
       - uses: ruby/setup-ruby@v1
