--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,15 +28,15 @@ jobs:
         run: |
           yarn --cwd 'web/app/themes/inside'
           yarn --cwd 'web/app/themes/inside' build
-      # - uses: ruby/setup-ruby@v1
-      #   with:
-      #     ruby-version: 2.6
-      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      # - uses: miloserdow/capistrano-deploy@master
-      #   with:
-      #     target: production # Defines the environment that will be used for the deployment
-      #     deploy_key: ${{ secrets.DEPLOY_ENC_KEY }} # Name of the variable configured in Settings/Secrets of your github project
-      #     enc_rsa_key_pth: "deploy/deploy_id_rsa_enc"
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - uses: miloserdow/capistrano-deploy@master
+        with:
+          target: production # Defines the environment that will be used for the deployment
+          deploy_key: ${{ secrets.DEPLOY_ENC_KEY }} # Name of the variable configured in Settings/Secrets of your github project
+          enc_rsa_key_pth: "deploy/deploy_id_rsa_enc"
       - name: RSync theme
         id: deploy
         uses: Pendect/action-rsyncer@v1.1.0
@@ -47,4 +47,4 @@ jobs:
           options: ""
           ssh_options: "-p 2121"
           src: "/web/app/themes/inside/theme/*"
-          dest: "ftpeik78749@eikon.ch:inside.eikon.ch/releases/current/web/app/themes/inside/theme/"
+          dest: "ftpeik78749@eikon.ch:inside.eikon.ch/current/web/app/themes/inside/theme/"
