--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "12"
+          cache: "yarn"
+          cache-dependency-path: "./web/app/themes/inside//yarn.lock"
       - name: Yarn
         run: |
           yarn --cwd 'web/app/themes/inside'
