--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,9 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "advanced-custom-fields/advanced-custom-fields-pro": "^5.10",
     "wpackagist-plugin/timber-library": "^1.19",
-    "wpackagist-plugin/wpforms-lite": "^1.7"
+    "wpackagist-plugin/wpforms-lite": "^1.7",
+    "wpackagist-plugin/wp-graphql": "^1.10",
+    "wp-graphql/wp-graphql-acf": "^0.6.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
