--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     "wpackagist-plugin/timber-library": "^1.19",
     "wpackagist-plugin/wpforms-lite": "^1.7",
     "wpackagist-plugin/wp-graphql": "^1.10",
-    "wp-graphql/wp-graphql-acf": "^0.6.1"
+    "wp-graphql/wp-graphql-acf": "^0.6.1",
+    "wpackagist-plugin/members": "^3.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
@@ -59,6 +60,11 @@
     "preferred-install": "dist",
     "platform": {
       "php": "7.2"
+    },
+    "allow-plugins": {
+      "composer/installers": true,
+      "pivvenit/acf-pro-installer": true,
+      "roots/wordpress-core-installer": true
     }
   },
   "minimum-stability": "dev",
