--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "wpackagist-plugin/wpforms-lite": "^1.7",
     "wpackagist-plugin/wp-graphql": "^1.10",
     "wp-graphql/wp-graphql-acf": "^0.6.1",
-    "wpackagist-plugin/members": "^3.2"
+    "wpackagist-plugin/members": "^3.2",
+    "wpackagist-plugin/wp-mail-smtp": "^3.9"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
