--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ web/app/uploads/*
 
 # Custom query, not available on composer
 !web/app/plugins/wp-graphql-tax-query
+!web/app/plugins/my-first-block
 
 # WordPress
 web/wp
