--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ web/app/uploads/*
 
 # Custom query, not available on composer
 !web/app/plugins/wp-graphql-tax-query
-!web/app/plugins/my-first-block
+
+# Custom blocks plugins
+!web/app/mu-plugins/eikonblocks-*
 
 # WordPress
 web/wp
