--- a/web/app/mu-plugins/eikonblocks-projects/package.json
+++ b/web/app/mu-plugins/eikonblocks-projects/package.json
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^27.0.0"
+  },
+  "dependencies": {
+    "react-beautiful-dnd": "^13.1.1"
   }
 }
