--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DB_PASSWORD='database_password'
 WP_ENV='development'
 WP_HOME='http://example.com'
 WP_SITEURL="${WP_HOME}/wp"
+WP_HOME_ADMIN='http://api.example.com'
 
 # Specify optional debug.log path
 # WP_DEBUG_LOG='/path/to/debug.log'
