--- a/composer.json
+++ b/composer.json
@@ -54,10 +54,10 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wpengine/advanced-custom-fields-pro": "^6.2",
     "wpackagist-plugin/wp-graphql": "^1",
-    "wp-graphql/wp-graphql-acf": "^0.6.1",
     "wpackagist-plugin/members": "^3.2",
     "wpackagist-plugin/wp-mail-smtp": "^4.0",
-    "jysperu/php-qr-code": "^2.0"
+    "jysperu/php-qr-code": "^2.0",
+    "wpackagist-plugin/wpgraphql-acf": "^2.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
