--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,12 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -t eikon@ssh-eikon.alwaysdata.net "ls -al"
 
+      - name: Remove Bundler Deployment Config
+        run: bundle config --delete deployment
+
+      - name: Install Dependencies
+        run: bundle install
+
       - uses: miloserdow/capistrano-deploy@master
         with:
           target: production # Defines the environment that will be used for the deployment
