--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
-          bundler-cache: false # runs 'bundle install' and caches installed gems automatically
+          ruby-version: 2.7.8
+          bundler-cache: false
 
       - name: Install SSH Host Key
         uses: shimataro/ssh-key-action@v2
@@ -50,8 +50,8 @@ jobs:
       - name: Install Dependencies
         run: bundle install
 
-      - uses: miloserdow/capistrano-deploy@master
-        with:
-          target: production # Defines the environment that will be used for the deployment
-          deploy_key: ${{ secrets.DEPLOY_ENC_KEY }} # Name of the variable configured in Settings/Secrets of your github project
-          enc_rsa_key_pth: "deploy/deploy_id_rsa_enc"
+      - name: Deploy to staging
+        run: |
+          bundle exec cap staging deploy
+        env:
+          SSHKIT_COLOR: "1" # Enable colored output for better readability
