--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           ls ~/.ssh
           cat ~/.ssh/config
           cat ~/.ssh/github-actions
-          ssh -o BatchMode=yes -o StrictHostKeyChecking=no -t eikon@ssh-eikon.alwaysdata.net "ls -al"
+          ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
 
       - name: Remove Bundler Deployment Config
         run: bundle config --delete deployment
