--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Check SSH Key Viability
         run: |
-          ls ~/.ssh
+          ls -la ~/.ssh
           cat ~/.ssh/config
           cat ~/.ssh/github-actions
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
