--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           eval "$(ssh-agent -s)"
           ssh-add -D
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/github-actions
+          chmod 600 ~/.ssh/github-actions
           ssh-add ~/.ssh/github-actions
 
       - name: Set SSH Key Permissions
