--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,9 @@ jobs:
         run: |
           eval "$(ssh-agent -s)"
           ssh-add -D
-          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' > ~/.ssh/github-actions
-          chmod 600 ~/.ssh/github-actions
+          sudo chmod 700 ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' | sudo tee ~/.ssh/github-actions > /dev/null
+          sudo chmod 600 ~/.ssh/github-actions
           ssh-add ~/.ssh/github-actions
 
       - name: Check SSH Key Viability
