--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,8 @@ jobs:
         run: |
           eval "$(ssh-agent -s)"
           ssh-add -D
-          sudo chmod 700 ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' | sudo tee ~/.ssh/github-actions > /dev/null
-          sudo chmod 600 ~/.ssh/github-actions
+          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' > ~/.ssh/github-actions
+          chmod 600 ~/.ssh/github-actions
           ssh-add ~/.ssh/github-actions
 
       - name: Check SSH Key Viability
