--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,60 +1,46 @@
-name: Deploy staging with Capistrano
+name: Deploy to Production
 
 on:
   push:
     branches:
-      - refresh-2024
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Install PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "7.4" # Adjust the PHP version as needed
 
       - name: Add HTTP basic auth credentials for ACF
         run: echo '${{ secrets.COMPOSER_AUTH_JSON }}' > $GITHUB_WORKSPACE/auth.json
 
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7.8
-          bundler-cache: false
+      - name: Install Composer dependencies
+        run: composer install --no-dev --prefer-dist --optimize-autoloader
 
-      - name: Install SSH Host Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.DEPLOY_KEY }}
-          name: github-actions
-          known_hosts: ${{ secrets.HOST_KEY }}
-          config: |
-            host ssh-eikon.alwaysdata.net
-            IdentityFile ~/.ssh/github-actions
-            IdentitiesOnly yes
-            ForwardAgent yes
-
-      - name: Install SSH Key
-        run: |
-          eval "$(ssh-agent -s)"
-          ssh-add -D
-          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' > ~/.ssh/github-actions
-          chmod 600 ~/.ssh/github-actions
-          ssh-add ~/.ssh/github-actions
-
-      - name: Check SSH Key Viability
-        run: |
-          ls -la ~/.ssh
-          cat ~/.ssh/config
-          cat ~/.ssh/github-actions
-          ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
-
-      - name: Remove Bundler Deployment Config
-        run: bundle config --delete deployment
-
-      - name: Install Dependencies
-        run: bundle install
-
-      - name: Deploy to staging
-        run: |
-          bundle exec cap production deploy
+      - name: Sync files to server
+        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
         env:
-          SSHKIT_COLOR: "1" # Enable colored output for better readability
+          RS_RSH: "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa"
+
+      - name: Set up environment
+        run: |
+          ssh ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
+          ssh ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
+          ssh ssh-eikon.alwaysdata.net "mkdir -p /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads"
+
+      - name: Clear opcache
+        run: |
+          ssh ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
+          ssh ssh-eikon.alwaysdata.net "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
