--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to Production
+name: Deploy staging with Capistrano
 
 on:
   push:
     branches:
-      - main
+      - refresh-2024
 
 jobs:
   deploy:
