--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Debug SSH Key
+        run: |
+          echo "${{ secrets.DEPLOY_KEY }}" > deploy_key
+          cat deploy_key
+
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
