--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           ssh-keyscan ssh-eikon.alwaysdata.net >> ~/.ssh/known_hosts
 
       - name: Sync files to server
-        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
+        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:~/www/inside-2024.eikon.ch
         env:
           RSYNC_RSH: "ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes"
 
@@ -49,11 +49,11 @@ jobs:
 
       - name: Set up environment
         run: |
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "mkdir -p /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s ~/www/inside-2024.eikon.ch/.env ~/www/inside-2024.eikon.ch/current/.env"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s ~/www/inside-2024.eikon.ch/web/.htaccess ~/www/inside-2024.eikon.ch/current/web/.htaccess"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "mkdir -p ~/www/inside-2024.eikon.ch/current/web/app/uploads"
 
       - name: Clear opcache
         run: |
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > ~/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
           ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
