--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Debug SSH Key
-        run: |
-          echo "${{ secrets.DEPLOY_KEY }}" > deploy_key
-          cat deploy_key
-
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -34,26 +24,46 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-dev --prefer-dist --optimize-autoloader
 
-      - name: Add SSH host key
+      - name: Install SSH Host Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.DEPLOY_KEY }}
+          name: github-actions
+          known_hosts: ${{ secrets.HOST_KEY }}
+          config: |
+            host ssh-eikon.alwaysdata.net
+            IdentityFile ~/.ssh/github-actions
+            IdentitiesOnly yes
+            ForwardAgent yes
+
+      - name: Install SSH Key
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan ssh-eikon.alwaysdata.net >> ~/.ssh/known_hosts
+          eval "$(ssh-agent -s)"
+          ssh-add -D
+          ssh-add ~/.ssh/github-actions
+
+      - name: Set SSH Key Permissions
+        run: chmod 600 ~/.ssh/github-actions
+
+      - name: Check SSH Key Viability
+        run: |
+          ls -la ~/.ssh
+          cat ~/.ssh/config
+          cat ~/.ssh/github-actions
+          ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
 
       - name: Sync files to server
-        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:~/www/inside-2024.eikon.ch
+        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
         env:
           RSYNC_RSH: "ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes"
 
-      - name: Debug SSH connection
-        run: ssh -v -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net
-
       - name: Set up environment
         run: |
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s ~/www/inside-2024.eikon.ch/.env ~/www/inside-2024.eikon.ch/current/.env"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s ~/www/inside-2024.eikon.ch/web/.htaccess ~/www/inside-2024.eikon.ch/current/web/.htaccess"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "mkdir -p ~/www/inside-2024.eikon.ch/current/web/app/uploads"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "mkdir -p /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads"
 
       - name: Clear opcache
         run: |
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > ~/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
           ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes ssh-eikon.alwaysdata.net "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
