--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs:
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
 
       - name: Sync files to server
-        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
+        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' -e "ssh -o BatchMode=yes -o StrictHostKeyChecking=no -o IdentitiesOnly=yes" ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
+        env:
+          RSYNC_RSH: "ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes"
 
       - name: Set up environment
         run: |
