--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           ls -la ~/.ssh
           cat ~/.ssh/config
           cat ~/.ssh/github-actions
-          ssh -o BatchMode=yes -o StrictHostKeyChecking=no eikon@ssh-eikon.alwaysdata.net "ls -al"
+          ssh -o BatchMode=yes -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ls -al"
 
       - name: Sync files to server
         run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' -e "ssh -o BatchMode=yes -o StrictHostKeyChecking=no -o IdentitiesOnly=yes" ./ ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch
