--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,9 +59,9 @@ jobs:
 
       - name: Set up environment
         run: |
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
-          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "mkdir -p /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
+          ssh -o StrictHostKeyChecking=no -o IdentitiesOnly=yes eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside.eikon.ch/shared/web/app/uploads /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads"
 
       - name: Clear opcache
         run: |
