--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,14 +52,14 @@ jobs:
 
       - name: Set up environment
         run: |
-          ssh "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/.env ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/.env; fi"
-          ssh "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
-          ssh "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess; fi"
-          ssh "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
-          ssh "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads; fi"
-          ssh "ln -s /home/eikon/www/inside.eikon.ch/shared/web/app/uploads /home/eikon/www/inside-2024.eikon.ch/current/web/app"
+          ssh eikon@ssh-eikon.alwaysdata.net "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/.env ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/.env; fi"
+          ssh eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/.env /home/eikon/www/inside-2024.eikon.ch/current/.env"
+          ssh eikon@ssh-eikon.alwaysdata.net "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess; fi"
+          ssh eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside-2024.eikon.ch/shared/web/.htaccess /home/eikon/www/inside-2024.eikon.ch/current/web/.htaccess"
+          ssh eikon@ssh-eikon.alwaysdata.net "if [ -L /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads ]; then rm /home/eikon/www/inside-2024.eikon.ch/current/web/app/uploads; fi"
+          ssh eikon@ssh-eikon.alwaysdata.net "ln -s /home/eikon/www/inside.eikon.ch/shared/web/app/uploads /home/eikon/www/inside-2024.eikon.ch/current/web/app"
 
       - name: Clear opcache
         run: |
-          ssh "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
-          ssh "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
+          ssh eikon@ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
+          ssh eikon@ssh-eikon.alwaysdata.net "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
