--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         run: chmod 600 ~/.ssh/github-actions
 
       - name: Sync files to server
-        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' -e "ssh -o BatchMode=yes -o StrictHostKeyChecking=no -o IdentitiesOnly=yes" ./ eikon@ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch/current
+        run: rsync -avz --delete --exclude '.env' --exclude 'web/.htaccess' -e "ssh -o BatchMode=yes" ./ eikon@ssh-eikon.alwaysdata.net:/home/eikon/www/inside-2024.eikon.ch/current
         env:
           RSYNC_RSH: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no"
 
