--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ web/app/plugins/*
 web/app/mu-plugins/*/
 web/app/upgrade
 web/app/cache/
+web/app/uploads
 web/app/uploads/*
 !web/app/uploads/.gitkeep
 
