--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,3 +63,4 @@ jobs:
         run: |
           ssh eikon@ssh-eikon.alwaysdata.net "echo '<?php opcache_reset(); ?>' > /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
           ssh eikon@ssh-eikon.alwaysdata.net "curl -s https://inside-2024.eikon.ch/opcache_clear.php"
+          ssh eikon@ssh-eikon.alwaysdata.net "rm -rf /home/eikon/www/inside-2024.eikon.ch/current/web/opcache_clear.php"
