--- a/web/app/mu-plugins/eikonblocks-projects/package.json
+++ b/web/app/mu-plugins/eikonblocks-projects/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eikonblocks-projects",
   "version": "0.1.0",
-  "description": "Example block scaffolded with Create Block tool.",
+  "description": "Projects block scaffolded with Create Block tool for eikon website.",
   "author": "The WordPress Contributors",
   "license": "GPL-2.0-or-later",
   "main": "build/index.js",
@@ -16,8 +16,5 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^27.0.0"
-  },
-  "dependencies": {
-    "react-beautiful-dnd": "^13.1.1"
   }
 }
