Remove the build dir from the repo and add some magic to build it during CI

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ web/app/uploads/*
 
 # Custom blocks plugins
 !web/app/mu-plugins/eikonblocks-*
+web/app/mu-plugins/eikonblocks-*/build/
 
 # WordPress
 web/wp
