--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
   ],
   "require": {
     "php": ">=8.3",
-    "composer/installers": "^1.12",
+    "composer/installers": "^1.0",
     "vlucas/phpdotenv": "^5.3",
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
@@ -53,11 +53,11 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wpengine/advanced-custom-fields-pro": "^6.2",
-    "wpackagist-plugin/wp-graphql": "^1",
+    "wpackagist-plugin/wp-graphql": "^2.1",
+    "wpackagist-plugin/wpgraphql-acf": "^2.2",
     "wpackagist-plugin/members": "^3.2",
     "wpackagist-plugin/wp-mail-smtp": "^4.0",
-    "jysperu/php-qr-code": "^2",
-    "wpackagist-plugin/wpgraphql-acf": "^2.2"
+    "jysperu/php-qr-code": "^2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
