--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ AUTH_SALT='generateme'
 SECURE_AUTH_SALT='generateme'
 LOGGED_IN_SALT='generateme'
 NONCE_SALT='generateme'
+
+# Infomaniak VOD API token
+INFOMANIAK_VOD_API_TOKEN='your_api_token_here'
