--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ web/app/uploads/*
 # Custom query, not available on composer
 !web/app/plugins/wp-graphql-tax-query
 !web/app/plugins/vod-video-field
+!web/app/plugins/vod-infomaniak
 
 # Custom blocks plugins
 !web/app/mu-plugins/eikonblocks-*
