updates video pagination scrapping

--- a/.env.example
+++ b/.env.example
@@ -29,4 +29,5 @@ LOGGED_IN_SALT='generateme'
 NONCE_SALT='generateme'
 
 # Infomaniak VOD API token
+INFOMANIAK_CHANNEL_ID='1234'
 INFOMANIAK_VOD_API_TOKEN='your_api_token_here'
